created description, ingredients unordered list and ordered list cooking instructions.

--- a/recipes/rice-and-veg.html
+++ b/recipes/rice-and-veg.html
@@ -9,5 +9,27 @@
 <body>
     <h1>Rice and <em>Veg</em></h1>
     <img src="../recipes/food-images/rice-and-veg.jpg" alt="A picture of rice and vegetables">
+    <p><h3><strong>Rice & Veg Recipe</strong></h3></p>
+    <p>A simple and effective dish</p>
+    <p>Tastes like rice and vegetables</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Rice</li>
+        <li>Veg</li>
+        <li>A bit of <em>pazazzzzz</em></li>
+        <li>The patience of a kung fu master</li>
+    </ul>
+    <h2><strong>Cooking Instructions</strong></h2>
+    <ol>
+        <li>Boil Water + plenty of <em>salt</em></li>
+        <li>Whack some oil in a pan of the frying</li>
+        <li>Chop Veg and start frying that shit up</li>
+        <li>add <em>pazazzzzz</em> to veg</li>
+        <li>Add Rice when water has achieved boiling status</li>
+        <li>chill out for a second. cut yourself some slack. It's tough times we're living in</li>
+        <li>Once rice is ready whack it in with vegtables</li>
+        <li>Badabing Badaboom you've done it</li>
+        <li>Add one gold star to gold star collection</li>
+    </ol>
 </body>
 </html>
