--- a/recipes/rice-and-veg.html
+++ b/recipes/rice-and-veg.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rice & Veg</title>
 </head>
 <body>
     <h1>Rice and <em>Veg</em></h1>
     <img src="../recipes/food-images/rice-and-veg.jpg" alt="A picture of rice and vegetables">
     <p><h3><strong>Rice & Veg Recipe</strong></h3></p>
-    <p>A simple and effective dish</p>
+    <p>A simple, yet effective dish</p>
     <p>Tastes like rice and vegetables</p>
     <h2>Ingredients</h2>
     <ul>
@@ -22,11 +22,11 @@
     <h2><strong>Cooking Instructions</strong></h2>
     <ol>
         <li>Boil Water + plenty of <em>salt</em></li>
-        <li>Whack some oil in a pan of the frying</li>
+        <li>Whack some oil in a pan of the frying sort and bang it on the heat like</li>
         <li>Chop Veg and start frying that shit up</li>
-        <li>add <em>pazazzzzz</em> to veg</li>
+        <li>Add <em>pazazzzzz</em> to veg</li>
         <li>Add Rice when water has achieved boiling status</li>
-        <li>chill out for a second. cut yourself some slack. It's tough times we're living in</li>
+        <li>Chill out for a second. Cut yourself some slack. It's tough times we're living in</li>
         <li>Once rice is ready whack it in with vegtables</li>
         <li>Badabing Badaboom you've done it</li>
         <li>Add one gold star to gold star collection</li>
