added home page link

--- a/recipes/rice-and-veg.html
+++ b/recipes/rice-and-veg.html
@@ -7,6 +7,7 @@
     <title>Rice & Veg</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Rice and <em>Veg</em></h1>
     <img src="../recipes/food-images/rice-and-veg.jpg" alt="A picture of rice and vegetables">
     <p><h3><strong>Rice & Veg Recipe</strong></h3></p>
