created ul for recipes. added href for second recipe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a>
+    <ul>
+        <li><a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a></li>
+        <li><a href="/recipes/oven-pizza.html">Simple Oven Pizza</a></li>
+    </ul>
 </body>
 </html>
