fixed href link to oven-pizza.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a></li>
-        <li><a href="/recipes/oven-pizza.html">Simple Oven Pizza</a></li>
+        <li><a href="./recipes/oven-pizza.html">Simple Pizza</a> </li>
     </ul>
 </body>
 </html>
