--- a/recipes/oven-pizza.html
+++ b/recipes/oven-pizza.html
@@ -7,6 +7,7 @@
     <title>Oven Pizza</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Simple Oven Cooked Pizza</h1>
     <img src="./food-images/simple-oven-pizza.jpg" alt="A picture of a manky looking pizza lol">
     <h3>Pizza</h3>
