added href to new recipe

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a></li>
         <li><a href="./recipes/oven-pizza.html">Simple Pizza</a> </li>
+        <li><a href="./recipes/dave-mash.html">Big Daves Secret Mash</a></li>
     </ul>
 </body>
 </html>
