Added CSS sheet folder. Created style for rice and veg page. Edited some syntax etc. in rice-and-veg.html

--- a/recipes/rice-and-veg.html
+++ b/recipes/rice-and-veg.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rice & Veg</title>
+    <link rel="stylesheet" href="../Style-Sheets/rice-veg-style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Rice and <em>Veg</em></h1>
-    <img src="../recipes/food-images/rice-and-veg.jpg" alt="A picture of rice and vegetables">
-    <p><h3><strong>Rice & Veg Recipe</strong></h3></p>
-    <p>A simple, yet effective dish</p>
-    <p>Tastes like rice and vegetables</p>
-    <h2>Ingredients</h2>
+    <h1 class="Title" id="Main">Rice and Veggies</h1>
+    <img id="rice-veg-picture" src="../recipes/food-images/rice-and-veg.jpg" alt="A picture of rice and vegetables">
+    <h2 class="Title">Rice & Veg Recipe</h2>
+    <div class="Description">
+        <div>A simple, yet effective dish</div>
+        <div>Tastes like rice and vegetables</div>
+    </div>
+    <h2 class="Title">Ingredients</h2>
+    <div class="Description">
     <ul>
         <li>Rice</li>
         <li>Veg</li>
         <li>A bit of <em>pazazzzzz</em></li>
         <li>The patience of a kung fu master</li>
     </ul>
-    <h2><strong>Cooking Instructions</strong></h2>
+    </div>
+    <h2 class="Title">Cooking Instructions</h2>
+    <div class="Description">
     <ol>
         <li>Boil Water + plenty of <em>salt</em></li>
         <li>Whack some oil in a pan of the frying sort and bang it on the heat like</li>
@@ -32,5 +38,6 @@
         <li>Badabing Badaboom you've done it</li>
         <li>Add one gold star to gold star collection</li>
     </ol>
+    </div>
 </body>
 </html>
