added stylesheet. created class homepage titles. removed ul as text wasn't centered correctly + bullet points visible on left.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="./Style-Sheets/homepage.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a></li>
-        <li><a href="./recipes/oven-pizza.html">Simple Pizza</a> </li>
-        <li><a href="./recipes/dave-mash.html">Big Daves Secret Mash</a></li>
-    </ul>
+    <div class="Homepage Titles">
+        <p><a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a></p>
+        <p><a href="./recipes/oven-pizza.html">Simple Pizza</a></p>
+        <p><a href="./recipes/dave-mash.html">Big Daves Secret Mash</a></p>
+    </div>
 </body>
 </html>
