added buttons. create list with inline css. need to change just trying ideas.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <div class="Homepage Titles">
-        <p><a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a></p>
-        <p><a href="./recipes/oven-pizza.html">Simple Pizza</a></p>
-        <p><a href="./recipes/dave-mash.html">Big Daves Secret Mash</a></p>
+        <ul style="list-style:none" class="box">
+        <li><button><a href="../odin-recipes/recipes/rice-and-veg.html">Rice and Veg</a></Button></li>
+        <li><button><a href="./recipes/oven-pizza.html">Simple Pizza</a></button></li>
+        <li><button><a href="./recipes/dave-mash.html">Big Daves Secret Mash</a></button></li>
+        </ul>
     </div>
 </body>
 </html>
